feature: verify user email when register
